--- a/remote_config.json
+++ b/remote_config.json
@@ -1,7 +1,7 @@
 {
   "showAds":true,
   "adsInterval":60,
-  "showAppOpenAd":true,
+  "showAppOpenAd":false,
   "showFirstAd":false,
   "showInterstitial":true,
   "showTestAds":false,
